--- a/expense_tracker/templates/layout.jinja2
+++ b/expense_tracker/templates/layout.jinja2
@@ -7,6 +7,7 @@
 <body>
     <nav>
         <li><a href="{{ request.route_url('home') }}">Home</a></li>
+        <li><a href="{{ request.route_url('create') }}">New Expense</a></li>
     </nav>
     <h1>{{ title }}</h1>
     {% block content %}{% endblock %}
