Update for security

--- a/expense_tracker/templates/layout.jinja2
+++ b/expense_tracker/templates/layout.jinja2
@@ -7,7 +7,12 @@
 <body>
     <nav>
         <li><a href="{{ request.route_url('home') }}">Home</a></li>
+        {% if request.authenticated_userid %}
         <li><a href="{{ request.route_url('create') }}">New Expense</a></li>
+        <li><a href="{{ request.route_url('logout') }}">Log Out</a></li>
+        {% else %}
+        <li><a href="{{ request.route_url('login') }}">Log In</a></li>
+        {% endif %}
     </nav>
     <h1>{{ title }}</h1>
     {% block content %}{% endblock %}
